git commit -m " included a style to all projects page to add padding to the top to prevent the navbar from overlapping the content"

--- a/css/style2.css
+++ b/css/style2.css
@@ -902,6 +902,9 @@ header .navbar ul li a:hover {
 .projects .viewall .btn:hover i {
   transform: translateX(5px);
 }
+#all-projects {
+  padding-top: 120px;
+}
 
 .modal {
   display: none;
